--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Simple Kanban — Manage your tasks effortlessly",
-  "description": "A simple Kanban board to manage your tasks",
+  "description": "A simple Kanban board as a browser extension to manage your tasks",
   "offline_enabled": true,
-  "version": "0.0.1",
-  "manifest_version": 3,
+  "version": "0.0.2",
+  "manifest_version": 4,
   "homepage_url": "https://github.com/amitmerchant1990/simple-kanban",
   "icons": {
     "16": "icons/icon16.png",
